--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "file-saver": "^2.0.2",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
