--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-file-base64": "^1.0.3",
     "react-scripts": "4.0.0",
+    "react-share": "^4.3.1",
     "reactstrap": "^8.7.0",
     "web-vitals": "^0.2.4"
   },
