--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-file-base64": "^1.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-share": "^4.3.1",
     "reactstrap": "^8.7.0",
